Fix rtl-viewpager dependency version

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ reprint = "2cb206415d"
 #recyclerviewFastscroller
 recyclerviewFastscroller = "5a95285b1f"
 #rtlViewpager
-rtlViewpager = "940f12724f"
+rtlViewpager = "v2.0.0"
 #Compose
 composeActivity = "1.8.0"
 compose = "1.6.0-alpha07"
